<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/SpotifyAPIBUTTON"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="118dp"
        android:layout_marginEnd="119dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#00D64D4D"
        android:text="@string/connect_to_spotify"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Beacon1Text"
        android:layout_width="88dp"
        android:layout_height="41dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="17dp"
        android:text="@string/beacon_1"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/Beacon2Text"
        app:layout_constraintEnd_toStartOf="@+id/Beacon1RSSI"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Beacon2Text"
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="19dp"
        android:text="@string/beacon_2"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/Beacon3Text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Beacon1Text" />

    <TextView
        android:id="@+id/Beacon3Text"
        android:layout_width="91dp"
        android:layout_height="44dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="418dp"
        android:text="@string/beacon_3"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Beacon3RSSI"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Beacon2Text" />

    <TextView
        android:id="@+id/Beacon1RSSI"
        android:layout_width="207dp"
        android:layout_height="44dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="86dp"
        android:layout_marginBottom="18dp"
        android:text="@string/beacon1_val"
        app:layout_constraintBottom_toTopOf="@+id/Beacon2RSSI"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Beacon1Text"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Beacon2RSSI"
        android:layout_width="207dp"
        android:layout_height="44dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="86dp"
        android:layout_marginBottom="24dp"
        android:text="@string/beacon2_val"
        app:layout_constraintBottom_toTopOf="@+id/Beacon3RSSI"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Beacon2Text"
        app:layout_constraintTop_toBottomOf="@+id/Beacon1RSSI" />

    <TextView
        android:id="@+id/Beacon3RSSI"
        android:layout_width="207dp"
        android:layout_height="44dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="86dp"
        android:layout_marginBottom="346dp"
        android:text="@string/beacon3_val"
        app:layout_constraintBottom_toTopOf="@+id/SpotifyAPIBUTTON"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Beacon3Text"
        app:layout_constraintTop_toBottomOf="@+id/Beacon2RSSI" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="125dp" />

    <TextView
        android:id="@+id/StatusText"
        android:layout_width="81dp"
        android:layout_height="45dp"
        android:layout_marginTop="313dp"
        android:layout_marginEnd="37dp"
        android:text="@string/status"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintBottom_toTopOf="@+id/isConnectedText"
        app:layout_constraintEnd_toStartOf="@+id/SpotifyAPIBUTTON"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Beacon3Text" />

    <TextView
        android:id="@+id/isConnectedText"
        android:layout_width="111dp"
        android:layout_height="37dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="16dp"
        android:text="@string/disconnected"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/SpotifyAPIBUTTON"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="192dp"
        android:layout_marginBottom="6dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/SpotifyAPIBUTTON"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/StatusText"
        app:layout_constraintTop_toBottomOf="@+id/Beacon3RSSI"
        app:layout_constraintVertical_bias="0.39" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="135dp"
        android:layout_height="163dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="292dp"
        android:layout_marginEnd="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/SpotifyAPIBUTTON"
        app:layout_constraintTop_toBottomOf="@+id/Beacon3RSSI"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/spotify_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>